Check if Array Is Sorted and Rotated

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Remove duplicates from sorted array/Index.html
 Remove duplicates from sorted array/Readme.md
 Remove duplicates from sorted array/script.js
 Two Sum/Readme.md
+Highest Occurring Element in an Array/Readme.md
+Highest Occurring Element in an Array/script.js
