Maximum Average Subarray I

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ Remove duplicates from sorted array/script.js
 Two Sum/Readme.md
 Highest Occurring Element in an Array/Readme.md
 Highest Occurring Element in an Array/script.js
+Group Anagrams/script.js
+Best Time to Buy and Sell Stock/Readme.md
+Best Time to Buy and Sell Stock/script.js
+Group Anagrams/Readme.md
